--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="container-fluid">
 	<header class="box1">
 			<h1>Curriculum vitae</h1>
-			<img src="images/patience.jpg"><!--faites bien attention au chemin entre l'index et votre image-->
+			<img src="images/Patience.jpg"><!--faites bien attention au chemin entre l'index et votre image-->
 		<nav>
 			<ol></br>
 				<b><li>Expérience professionnelle</b></li>
